--- a/FuhoCommerce.Api/src/FuhoCommerce.ApplicationApi/FuhoCommerce.ApplicationApi.csproj
+++ b/FuhoCommerce.Api/src/FuhoCommerce.ApplicationApi/FuhoCommerce.ApplicationApi.csproj
@@ -16,9 +16,13 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.4" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.4.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.4.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.4.1" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\FuhoCommerce.Application\FuhoCommerce.Application.csproj" />
 	  <ProjectReference Include="..\FuhoCommerce.Common\FuhoCommerce.CrossCuttingConcern.csproj" />
 	  <ProjectReference Include="..\FuhoCommerce.Infrastructure\FuhoCommerce.Infrastructure.csproj" />
 	  <ProjectReference Include="..\FuhoCommerce.Persistence\FuhoCommerce.Persistence.csproj" />
@@ -27,6 +31,7 @@
 	<ItemGroup>
 	  <Reference Include="FuhoCommerce.HttpUtility">
 	    <HintPath>..\..\..\FuhoCommerce.Utilities\FuhoCommerce.HttpUtility\FuhoCommerce.HttpUtility\bin\Debug\netstandard2.0\FuhoCommerce.HttpUtility.dll</HintPath>
+	    <Private>true</Private>
 	  </Reference>
 	</ItemGroup>
 
