--- a/FuhoCommerce.Api/src/FuhoCommerce.Infrastructure/FuhoCommerce.Infrastructure.csproj
+++ b/FuhoCommerce.Api/src/FuhoCommerce.Infrastructure/FuhoCommerce.Infrastructure.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
