--- a/FuhoCommerce.IdentityServer/FuhoCommerce.IdentityServer/appsettings.json
+++ b/FuhoCommerce.IdentityServer/FuhoCommerce.IdentityServer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FuhoCommerce": "Server=.;Database=FuhoCommerce;Trusted_Connection=True;Application Name=FuhoCommerce;User ID=sa;Password=123456@hvn;"
+    "FuhoCommerce": "Server=(localdb)\\mssqllocaldb;Database=FuhoCommerce;Trusted_Connection=True;Application Name=FuhoCommerce;"
   },
 
   "Logging": {
