--- a/FuhoCommerce.Api/src/FuhoCommerce.Application/FuhoCommerce.Application.csproj
+++ b/FuhoCommerce.Api/src/FuhoCommerce.Application/FuhoCommerce.Application.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.4" />
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
   <ItemGroup>
