update function oder and add code coverage unit test

--- a/FuhoCommerce.Api/src/FuhoCommerce.Application/FuhoCommerce.Application.csproj
+++ b/FuhoCommerce.Api/src/FuhoCommerce.Application/FuhoCommerce.Application.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\FuhoCommerce.Domain\FuhoCommerce.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\OrderUserCases\Command\RemoveOrder\" />
+  </ItemGroup>
+
 </Project>
