--- a/FuhoCommerce.Api/src/FuhoCommerce.ApplicationApi/appsettings.json
+++ b/FuhoCommerce.Api/src/FuhoCommerce.ApplicationApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FuhoCommerce": "Server=.;Database=FuhoCommerce;Trusted_Connection=True;Application Name=FuhoCommerce;User ID=sa;Password=123456@hvn;"
+    "FuhoCommerce": "Server=127.0.0.1;Database=FuhoCommerce;Application Name=FuhoCommerce;User ID=sa;Password=Powerpassword;"
   },
   "Logging": {
     "LogLevel": {
